# vondo-spirit-tgbot

./: .env.example  .gitignore  DEPLOY.md  README.md  bot.db  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml
deploy/systemd/: group-member-guardian.service
scripts/: restart.sh
src/bot/: config.py  main.py
src/bot/db/: __init__.py  models.py  session.py
src/bot/handlers/: __init__.py  admin.py  chat_member.py  common.py
src/bot/repositories/: __init__.py  membership_repo.py
src/bot/services/: __init__.py  membership_service.py
src/group_member_guardian_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
